--- a/portfolio/gallery/index.html
+++ b/portfolio/gallery/index.html
@@ -473,7 +473,7 @@
                 <div class="swiper-wrapper">
                     <button onclick="loadDemoVideo('https://www.youtube.com/embed/aRbQIYbYAK0?si=YkqZwg0fTP0YOAJj')">QGIS With kakaoRoadView & MMS</button>
                     <button onclick="loadDemoVideo('https://www.youtube.com/embed/kQarRwDZmxw?si=S5u7dN34VHH1fsdfU')">LAS자동도화</button>
-                    <button onclick="loadDemoVideo('https://www.youtube.com/embed/kQarRwDZmxw?si=S5u7dN34VHH1fsdfU')">오종민박사논문참조 LR_Link에러검수</button>
+                    <button onclick="loadDemoVideo('https://www.youtube.com/embed/RxVHVwP6S3k?si=1-bBKMVdDzyVzdr6" title=')">오종민박사논문참조 LR_Link에러검수</button>
                     <button onclick="loadDemoVideo('https://www.youtube.com/embed/kQarRwDZmxw?si=S5u7dN34VHH1fsdfU')">각도이상검출 및 보완</button>
                     <button onclick="loadDemoVideo('https://www.youtube.com/embed/kQarRwDZmxw?si=S5u7dN34VHH1fsdfU')">시종점노드 검수&매칭</button>
                 </div>
