--- a/portfolio/gallery/index.html
+++ b/portfolio/gallery/index.html
@@ -473,8 +473,8 @@
                     <button onclick="loadDemoVideo('https://www.youtube.com/embed/aRbQIYbYAK0?si=YkqZwg0fTP0YOAJj')">QGIS With kakaoRoadView & MMS</button>
                     <button onclick="loadDemoVideo('https://www.youtube.com/embed/H_WVIy1m1yY?si=ENGxLx1GJb-Vvw9y')">LAS자동도화</button>
                     <button onclick="loadDemoVideo('https://www.youtube.com/embed/RxVHVwP6S3k?si=1-bBKMVdDzyVzdr6')">오종민박사논문참조 LR_Link에러검수</button>
-                    <button onclick="loadDemoVideo('https://www.youtube.com/embed/kQarRwDZmxw?si=S5u7dN34VHH1fsdfU')">각도이상검출 및 보완</button>
-                    <button onclick="loadDemoVideo('https://www.youtube.com/embed/kQarRwDZmxw?si=S5u7dN34VHH1fsdfU')">시종점노드 검수&매칭</button>
+                    <button onclick="loadDemoVideo('https://www.youtube.com/embed/rZm04IViknY?si=MzLEFlDZbpuXW-wu')">각도이상검출 및 보완</button>
+                    <button onclick="loadDemoVideo('https://www.youtube.com/embed/pNyCiWsfr7s?si=uMwxDo0byS-q2nnz')">시종점노드 검수&매칭</button>
                 </div>
                 <a class="swiper-button next" onclick="swipe(1)">&gt;</a>
             </div>
